--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==4.8.0
 djangorestframework==3.16.1
 drf-spectacular==0.28.0
 drf-yasg==1.21.11
+gunicorn==21.2.0
 inflection==0.5.1
 jmespath==1.0.1
 jsonschema==4.25.1
